Adding in wp8 files

--- a/plugin.xml
+++ b/plugin.xml
@@ -47,4 +47,14 @@
     </config-file>
     <framework src="libz.dylib" />
   </platform>
+
+  <platform name="wp8">
+    <config-file target="config.xml" parent="/*">
+      <feature name="Zip">
+        <param name="wp-package" value="Zip"/>
+      </feature>
+    </config-file>
+    <source-file src="src/wp8/Zip.cs" />
+  </platform>
+
 </plugin>
